fixed alignment

--- a/static/templateSpecific/StGallen/StGallen.css
+++ b/static/templateSpecific/StGallen/StGallen.css
@@ -17,7 +17,6 @@
 {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 .educationPoint .date
 {
@@ -64,10 +63,6 @@ h1{
 section
 {
     margin-bottom: 15px;
-}
-.personalInformation
-{
-    text-align: center;
 }
 .separated
 {
